--- a/accounting-parent/pom.xml
+++ b/accounting-parent/pom.xml
@@ -49,6 +49,7 @@
 		-->
 		
 		<!-- Apache Derby-based service implementation -->
+		<module>../accounting-service-core</module>
 		<module>../accounting-service-derby</module>
 		<module>../derby</module>
 		
