add service infrastructure

--- a/accounting-service-core/build.properties
+++ b/accounting-service-core/build.properties
@@ -1,4 +1,5 @@
 source.. = src/
 output.. = target/
 bin.includes = META-INF/,\
-               .
+               .,\
+               OSGI-INF/de.tfsw.accounting.service.core.InitService.xml
