--- a/accounting-logging/.classpath
+++ b/accounting-logging/.classpath
@@ -2,7 +2,10 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="log4j-api-2.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="log4j-core-2.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/log4j-api-2.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/log4j-core-2.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/log4j-jcl-2.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/log4j-jul-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
