--- a/accounting-logging/build.properties
+++ b/accounting-logging/build.properties
@@ -1,8 +1,14 @@
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
-			   .,\
-               log4j-api-2.5.jar,\
-               log4j-core-2.5.jar,\
+               .,\
                log4j2.xml,\
                NOTICE.txt,\
                README.txt,\
-               LICENSE.txt
+               LICENSE.txt,\
+               lib/log4j-api-2.11.0.jar,\
+               lib/log4j-core-2.11.0.jar,\
+               lib/log4j-jcl-2.11.0.jar,\
+               lib/log4j-jul-2.11.0.jar,\
+               lib/log4j-slf4j-impl-2.11.0.jar,\
+               lib/slf4j-api-1.7.25.jar
