--- a/accounting-logging/.classpath
+++ b/accounting-logging/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/log4j-core-2.11.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-jcl-2.11.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-jul-2.11.0.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
