--- a/accounting-service-core/build.properties
+++ b/accounting-service-core/build.properties
@@ -2,4 +2,4 @@ source.. = src/
 output.. = target/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/de.tfsw.accounting.service.core.UserProfileServiceImpl.xml
+               OSGI-INF/
